--- a/.github/workflows/.generate-snake.yml
+++ b/.github/workflows/.generate-snake.yml
@@ -19,7 +19,7 @@ jobs:
         uses: Platane/snk@v3
         id: snk
         with:
-          github_user_name: YOUR_GITHUB_USERNAME   # replace
+          github_user_name: nivedh-j   # replace
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
